--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -66,7 +66,7 @@
             <section id="openpo_project_overview">
                 <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
                     <h1>OpenPO -- Pre-order Manager</h1><br>
-                    <small>Concept · UI/UX Design</small>
+                    <small>Marketing Research · UI/UX Design</small>
                     <div class="row m-1rem-b m-3rem-t">
                         <div class="col-lg-6">
                             <h6>Duration</h6>
@@ -85,27 +85,69 @@
                     </div>
                 </div>
             </section>
+            <div class="row m-3rem-t">
+                <div class="col-lg-6 offset-lg-3">
+                    <img src="../img/openpo_process.png" alt="openpo project process">
+                </div>
+            </div>
             
+            <section id="openpo_kickoff" class="hideme">
+                <div class="container">
+                    <div class="row m-6rem-t">
+                        <div class="col-lg-4">
+                            <h3>Project <br>Kick-off</h3>
+                        </div>
+                        <div class="col-lg-6 offset-lg-2 m-3rem-t">
+                            <p>
+                                Pre-order business is a new market that the company wants to explore. Before removing to the solutions, I kicked off the project by stakeholder meetings to make sure that all stakeholders were bought into the process, understood the context of the project. In the meantime, I also introduced the approaches and roadmap to stakeholders.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section id="openpo_research" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-8 offset-lg-2">
-                            <h3>User Interviews</h3>
-                            <p>
-                                I kicked off the project by conducting user interviews. Together with the local Indonesian team, we recruited 15 merchants who are doing PO business in the field of F&B.  Through the interviews, I found that most interviewees treat PO business as a side business, meaning they have a fulltime job apart from the PO business. 
+                        <div class="col-lg-4">
+                            <h3>Initial Research</h3>
+                            <p class="m-0rem-t medium-dark-color">
+                                The local Indonesian team helped me with conducting user interviews due to the language barrier. Before the research started, I conducted a user research workshop where the team can learn the process of a user interview with some pro tips and can practice with each other. I've also created a discussion guide to assist the team in facilitating conversations with interviewees. 
                             </p>
-
-                            <P class="m-3rem-t font-italic medium-dark-color text-center">
-                                "I'm a single mom. I am doing PO get to get some extra money. By doing pre-order I can control the number of orders and when to produce."
-                            </P>
-
-                            <h4 class="m-6rem-t">Journey Map</h4>
-                            <p>This journey map summarized how our interviewees operate their PO business. </p>
+                        </div>
+                        <div class="col-lg-6 offset-lg-2 m-3rem-t">
+                            <h6>goal</h6>
+                            <p>
+                                To understand how merchants operate PO business, in particular,  how do they collect payments, deliver orders, manage orders, and communicate with customers.
+                            </p>
+                            <h6>methods</h6>
+                            <ul>
+                                <li>User Interview</li>
+                                <li>Survey</li>
+                            </ul>
+                            <h6>participants</h6>
+                            <ul>
+                                <li>15 merchants for the first round interview</li>
+                                <li>15 surveyees</li>
+                            </ul>
+                            <h6>Criteria</h6>
+                            <ul>
+                                <li>Actively doing PO business (open new POs at least two times a month)</li>
+                                <li>In the F&B field</li>
+                            </ul>
+                            <img class="shadow rounded" src="../img/openpo_discussion guide.png" alt="Discussion guide for openpo initial research">
                         </div>
                     </div>
-                    <div class="row m-6rem-t">
-                        <div class="col-lg-12">
-                            <img src="../img/openPO_journey_map.png" alt="journey map for openPO">
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-4">
+                            <p class="medium-dark-color">
+                                After the interviews and surveys completed, I synthesized the raw data into a person and a journey map.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-10 offset-lg-1">
+                            <img src="../img/openpo_persona.png" alt="Persona of OpenPO">
+                            <img src="../img/openpo_jm.png" alt="Journey map of persona sarah">
                         </div>
                     </div>
                 </div>
@@ -113,21 +155,37 @@
             <section id="openpo_brainstorming" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-8 offset-lg-2">
+                        <div class="col-lg-4">
                             <h3>Brainstorming</h3>
-                            <p>After the initial research, I conducted a brainstorming section with the design team to define the problem statement and the user flow for our MVP.</p>
-                            <h4 class="m-3rem-t">The Problems</h4>
-                            <p>
-                                PO business owners need to provide information that customers need timely, accurately, without spending too much time.
+                            <p class="m-0rem-t medium-dark-color">
+                                After the initial research, I conducted a brainstorming section with the design team to define the problem statement and the user flow for our MVP.
                             </p>
+                        </div>
+                        <div class="col-lg-3 offset-lg-2 m-3rem-t">
+                            <svg class="icon openpo-color"><use xlink:href="symbol-defs.svg#icon-no_1"></use></svg>
                             <p>
-                                PO business owners need to manage the order status in a single place to make the operation work more efficient. 
+                                Sarah needs to be able to provide information about products and PO to customers timely, accurately, without spending too much time. 
                             </p>
-                            <h4 class="m-3rem-t">User Flows</h4>
-                            <h6>Buyer's Flow</h6>
-                            <img src="../img/openpo_buyer_flow.png" alt="openPO buyer's user flow">
-                            <h6>Seller's Flow</h6>
-                            <img src="../img/openpo_seller_flow.png" alt="openPO seller's user flow">
+                        </div>
+                        <div class="col-lg-3 m-3rem-t">
+                            <svg class="icon openpo-color"><use xlink:href="symbol-defs.svg#icon-no_2"></use></svg>
+                            <p>
+                                Sarah needs to manage the order status in a single place to make the operation work more efficient.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-2">
+                            <h5>Buyer's Flow</h5>
+                        </div>
+                        <div class="col-lg-10">
+                            <img src="../img/openpo_buyer_flow.png" alt="openpo workflow for buyer">
+                        </div>
+                        <div class="col-lg-2">
+                            <h5>Seller's Flow</h5>
+                        </div>
+                        <div class="col-lg-10">
+                            <img src="../img/openpo_seller_flow.png" alt="openpo workflow for seller">
                         </div>
                     </div>
                 </div>
@@ -135,12 +193,15 @@
             <section id="openpo_lo-fi" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-8 offset-lg-2">
+                        <div class="col-lg-4">
                             <h3>Low-Fidelity Prototype</h3>
-                            <p>
+                            <p class="m-0rem-t medium-dark-color">
                                 With the low-fidelity prototypes, the pre-order management and the general structure of the service could easily be tested in internal usability tests. Without much effort, adjustments could be made before going into the much more costly digital implementation.
                             </p>
+                        </div>
+                        <div class="col-lg-8">
                             <img src="../img/openpo_lofi.png" alt="openpo wireframe">
+
                         </div>
                     </div>
                 </div>
@@ -148,11 +209,13 @@
             <section id="openpo_visual_design" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-8 offset-lg-2">
+                        <div class="col-lg-4">
                             <h3>Visual Style</h3>
-                            <p>
+                            <p class="m-0rem-t medium-dark-color">
                                 The visual design was developed by iterating from mood boards and styletiles to the UI kit and finally to creating a first version of the style guide.
                             </p>
+                        </div>
+                        <div class="col-lg-8">
                             <img src="../img/openpo_style.png" alt="openpo style guide">
                         </div>
                     </div>
@@ -162,21 +225,20 @@
             <section id="openpo_validation" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-4 offset-lg-2">
+                        <div class="col-lg-4">
                             <h3>Validation</h3>
                             <p>
                                 Before implementing the design and release to the market, the product management team wanted to validate if the proposed solution is what our potential customers want.
                             </p>
-                            <h6>Proposed Validation Plan</h6>
+                        </div>
+                        <div class="col-lg-6 offset-lg-2 m-6rem-t">
+                            <h6>My Proposed Validation Plan</h6>
                             <ol>
-                                <li>Create a pre-launch page for the product</li>
+                                <li>Create a product pre-launch page using wix (<a class="openpo-color" href="https://www.idn.silot.ai/openpo">https://www.idn.silot.ai/openpo</a>)</li>
                                 <li>Spread the website to PO business owners on Instagram</li>
                                 <li>Track the percentage of people want to get early access to the project of people we reached out</li>
                                 <li>Track the organic traffic of the website</li>
                             </ol>
-                        </div>
-                        <div class="col-lg-4 m-6rem-t">
-                            <img src="../img/openpo_pre-launch.png" alt="openPO pre-launch page design">
                         </div>
                     </div>
                     
@@ -185,8 +247,10 @@
             <section id="openpo_future_plan" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-8 offset-lg-2">
+                        <div class="col-lg-4">
                             <h3>Future Plan</h3>
+                        </div>
+                        <div class="col-lg-6 offset-lg-2 m-3rem-t">
                             <p>
                                 It depends on the result of the validation plan. If we got more than 50% of people to sign up for our first release, we would proceed to implementation. Otherwise, we would conduct in-depth research to understand why people didn't sign up and adjust our plan accordingly.
                             </p>
