--- a/static/projects/esplanade.html
+++ b/static/projects/esplanade.html
@@ -121,7 +121,7 @@
                         <div class="col-lg-6 m-3rem-t">
                             <h5>What are the contents the website contains?</h5>
                             <p>
-                                We started the project by conducting a inventory to get an overview of the existing content on the website.
+                                We started the project by conducting a content inventory to get an overview of the existing content on the website.
                             </p>
         
                             <h5>User research & Interviews</h5>
