--- a/static/projects/zalora.html
+++ b/static/projects/zalora.html
@@ -123,7 +123,7 @@
                             <h3>Strategy</h3>
                         </div>
                         <div class="col-lg-6 m-3rem-t">
-                            <h5>System review</h5>
+                            <h5>System Review</h5>
                             <p>
                                 We started the project by assessing as-is design assets, code libraries, documentation.
                             </p>
@@ -142,7 +142,7 @@
                         <div class="col-lg-5">
                             <h3>Design, Code & Doc</h3>
                             <p>
-                                We delivered the components/elements progressively over sprints. We started by design and building the visual style (e.g., color, typography, and space), which was followed by UI components (e.g., Button, Tabs, Labels).
+                                We followed the atomic design principle and delivered the components progressively over sprints. Atomic Design defines five component stages. In the component library, we include both atoms and molecules. Whereas organisms, templates, and pages are documented in the design files. 
                             </p>
                         </div>
                     </div>
