--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <span class="date">UX Design</span>
                                         <span class="meta">User Research, CJM, Mobile Design</span>
                                     </div>
-                                    <h5><a href="static/pages/zalora.html">OpenPO, Pre-order Manager</a></h5>
+                                    <h5><a href="static/pages/openpo.html">OpenPO, Pre-order Manager</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/openpo.html">Read More</a>
                                     </div>
