update homepage style

--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -43,7 +43,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
+                        <!-- <span>Yichang Li</span> -->
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
