--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -43,7 +43,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
+                        <!-- <span>Yichang Li</span> -->
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
@@ -101,14 +101,14 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col">
-                            <h3>The Process</h3>
+                            <h3 class="display-text">The Process</h3>
                         </div>
                     </div>
                     <div class="row justify-content-center m-2rem-t">
                         <div class="col-lg-9">
                             <picture>
-                                <source srcset="../img/design_process.png" media="(min-width: 576px)">
-                                <img src="../img/design_process_sm.png" alt="the summary of the design process">
+                                <source srcset="../img/esplanade/design_process.png" media="(min-width: 576px)">
+                                <img src="../img/esplanade/design_process_sm.png" alt="the summary of the design process">
                             </picture>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-6">
-                            <h3>User Research</h3>
+                            <h3 class="display-text">User Research</h3>
                         </div>
                         <div class="col-lg-6 m-3rem-t">
                             <h5>What are the contents the website contains?</h5>
@@ -142,12 +142,12 @@
                     </div>
                     <div class="row">
                         <div class="offset-lg-6 col-lg-3 m-1rem-t">
-                            <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-casual_art"></use></svg>
+                            <svg class="icon esplanade-color"><use xlink:href="symbol-defs.svg#icon-casual_art"></use></svg>
                             <h5>Casual Arts-goers</h5>
                             <div class="font-italic">“I like to make the most of my weekends by checking out interesting events. I also like trying out cool bars and restaurants. ”</div>
                         </div>
                         <div class="col-lg-3 m-1rem-t">
-                            <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-aficionados"></use></svg>
+                            <svg class="icon esplanade-color"><use xlink:href="symbol-defs.svg#icon-aficionados"></use></svg>
                             <h5>Avid Aficionados</h5>
                             <div class="font-italic">“As part of a performance group, it is important for us to be able to quickly find information on venues so that we can book and plan our performances easily.”</div>
 
@@ -167,12 +167,13 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-5">
-                            <h3>Issue Prioritisation</h3>
+                            <h3 class="display-text">Issue Prioritisation</h3>
                         </div>
                         <div class="offset-lg-1 col-lg-6 m-3rem-t">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-no_1"></use></svg>
+                                    <h3 class="display-text esplanade-color">1</h3>
+                                    <!-- <svg class="icon esplanade-color"><use xlink:href="symbol-defs.svg#icon-no_1"></use></svg> -->
                                     <h5 class="m-1rem-t">Confusing Double Navigation Bar & Too Many Menu Items</h5>
                                     <ul class="medium-dark-color">
                                         <li>
@@ -184,7 +185,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-lg-6">
-                                    <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-no_2"></use></svg>
+                                    <!-- <svg class="icon esplanade-color"><use xlink:href="symbol-defs.svg#icon-no_2"></use></svg> -->
+                                    <h3 class="display-text esplanade-color">2</h3>
                                     <h5 class="m-1rem-t">Cluttered and Insufficient Information</h5>
                                     <ul class="medium-dark-color">
                                         <li>3/6 users were uncertain about the type of food the restaurant serves</li>
@@ -192,7 +194,8 @@
                                     </ul>
                                 </div>
                                 <div class="col-lg-6">
-                                    <svg class="icon m-2rem-t theme-color"><use xlink:href="symbol-defs.svg#icon-no_3"></use></svg>
+                                    <h3 class="display-text esplanade-color">3</h3>
+                                    <!-- <svg class="icon m-2rem-t esplanade-color"><use xlink:href="symbol-defs.svg#icon-no_3"></use></svg> -->
                                     <h5 class="m-1rem-t">Inflexible Filters and Too Many Results</h5>
                                     <ul class="medium-dark-color">
                                         <li>6/6 users manually scrolled through multiple pages to find an appropriate event</li>
@@ -207,13 +210,13 @@
                 <div class="container">
                     <div class="row m-3rem-t">
                         <div class="col-lg-5">
-                            <h3>Revised Information Architecture</h3>
+                            <h3 class="display-text">Revised Information Architecture</h3>
                             <div class="m-0rem-t medium-dark-color">To address the issue with the navigation, we needed to revise the information architecture of the site.</div>
                         </div>
                     </div>
                     <div class="row m-3rem-t justify-content-center">
                         <div class="col-lg-9">
-                            <img src="../img/card_sorting.png">
+                            <img src="../img/esplanade/card_sorting.png">
                         </div>
                     </div>
                     <div class="row m-3rem-t">
@@ -241,7 +244,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h3>Prototype + Result</h3>
+                            <h3 class="display-text">Prototype + Result</h3>
                             <div class="medium-dark-color m-0rem-t">We set up a hi-fi clickable prototype using Axure PR to provide usability insights.</div>
                         </div>
                     </div>
@@ -311,7 +314,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h3>Responsive Design</h3>
+                            <h3 class="display-text">Responsive Design</h3>
                             <div class="medium-dark-color m-0rem-t">
                                 We also redesigned the mobile website based on our new desktop site design.
                             </div>
@@ -342,7 +345,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <h3>What's Next</h3>
+                            <h3 class="display-text">What's Next</h3>
                             <p>
                                 There are a couple of areas that can be improved. Schools are one of the target customer segments of Esplanade. Due to the time and resource constraints, we couldn't conduct any research on this customer segment, and thus the school-related features are out of the scope for this project.
                             </p>
