--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -43,7 +43,6 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
@@ -80,7 +79,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>HUE Mail is an email system of Works Applications enterprise suits. It has 3 main digital channels: the admin portal, desktop website, and mobile app. In this project, I worked with the product owner of HUE Mail and the sales team to define the problems related to security issues, discover potential solutions, and deliver the interactive designs by following the company design system. 
+                                <div>HUE Mail is an email system that makes part of Works Applications enterprise suits. It has 3 main digital channels: the admin portal, desktop website, and mobile app. In this project, I worked with the product owner of HUE Mail and the sales team to define the problems related to security issues, discover potential solutions, and deliver the interactive designs by following the company design system. 
                                 </div>
                             </div>
                         </div>
@@ -116,7 +115,7 @@
                             <p>
                                 Due to the limited time and resources, I couldn't interview any real customers. As the target customers of the HUE Mail system were Japanese companies, and the majority of them are in banking and government fields. 
                             </p>
-                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-user_interview"></use></svg>User Interviews</h5>
+                            <h5><svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-user_interview"></use></svg>User Interviews</h5>
                             <p>
                                 I did my research by interviewing people who worked in the same fields in my circle. And I summarized my findings in user scenarios and sent them to the product owner and sales in the Japan office to review. It helped me to align my understanding and the direction of the project with the business side.   
                             </p>
@@ -136,12 +135,12 @@
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-4">
-                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-admin"></use></svg>Admin</h5>
+                            <h5><svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-admin"></use></svg>Admin</h5>
                             <h6>Set Rules</h6>
                             <p>Being a financial company with strict restrictions about sending attachments outside the organization, their administrator wants an approval flow for all users trying to send an attachment. So that emails with attachments will be held before the sender's supervisor approves the email.</p>
                         </div>
                         <div class="col-lg-4">
-                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-sender"></use></svg>Mail Sender</h5>
+                            <h5><svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-sender"></use></svg>Mail Sender</h5>
                             <h6>Send Requests</h6>
                             <p>The employee of a financial company wants to send mail outside the company that contains an attachment. He needs to submit an approval request to his supervisor.</p>
                             <h6>Send Reminder</h6>
@@ -150,7 +149,7 @@
                             <p>Once his reminder is not acknowledged, he realizes his supervisor is on leave and wants to change the approver.</p>
                         </div>
                         <div class="col-lg-4">
-                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-supervisor"></use></svg>Mail Approver</h5>
+                            <h5><svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-supervisor"></use></svg>Mail Approver</h5>
                             <h6>Edit & Approve</h6>
                             <p>Most points in the approval application from subordinates are correct, but there is a minor typing error. The supervisor wants to edit the typing error by himself and approve the mail with changes to save time.</p>
                             <h6>Remand Request</h6>
@@ -173,7 +172,7 @@
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-7">
-                            <img src="../img/huemail_create_rule.png"/>
+                            <img src="../img/huemail/huemail_create_rule.png"/>
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h5>Admin</h5>
@@ -202,12 +201,12 @@
                             </p>
                         </div>
                         <div class="offset-lg-1 col-lg-7">
-                            <img src="../img/huemail_sender.png"/>
+                            <img src="../img/huemail/huemail_sender.png"/>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-7">
-                            <img src="../img/huemail_approver.png"/>
+                            <img src="../img/huemail/huemail_approver.png"/>
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h5>Mail Approver</h5>
@@ -226,7 +225,7 @@
                         </div>
                         <div class="offset-lg-1 col-lg-6 m-3rem-t">
                             <h5> 
-                                <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-cognitive"></use></svg>
+                                <svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-cognitive"></use></svg>
                                 Cognitive Walkthrough
                             </h5>
                             <p>
@@ -242,7 +241,7 @@
                         </div>
                         <div class="offset-lg-6 col-lg-6 m-3rem-t">
                             <h5> 
-                                <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-ut"></use></svg>
+                                <svg class="icon huemail-color"><use xlink:href="symbol-defs.svg#icon-ut"></use></svg>
                                 Usability Testing
                             </h5>
                             <p>Immediately after the implementation, we conducted a usability testing section with our real customers in Japan. The testing included 2 parts. First of all, we asked the participants to perform the key tasks we identified during the design. After that, I also had a short interview with each of the participants to gather more feedback from them and ask some followup questions that I might have during the testing. 
