--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -43,7 +43,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
+                        <!-- <span>Yichang Li</span> -->
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
@@ -68,7 +68,7 @@
             <section id="zalora_project_overview">
                 <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
                     <div>
-                        <h1>Style -- ZALORA Design System</h1><br>
+                        <h1>Style</h1><br>
                         <small>UX Patterns · Web Development</small>
                         <div class="row m-1rem-b m-3rem-t">
                             <div class="col-lg-6">
@@ -81,7 +81,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>Style is a design system that defines the interaction standards, design patterns, and guidelines for all ZALORA products. It was my job to provide aid from the development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager, Interaction), Eugene (UX Manager, Research), Sheila (UI Designer) and, Doro (Product Manager) on the project.</div>
+                                <div>Style is a design system that defines the interaction standards, design patterns, and guidelines for all digital channels in ZALORA. It was my job to provide aid from the development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager, Interaction), Eugene (UX Manager, Research), Sheila (UI Designer) and, Doro (Product Manager) on the project.</div>
                                 <h6>Deliverables </h6>
                                 <ul>
                                     <li>ZALORA/Style (CSS component library)</li>
