--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="static/img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
+                        <!-- <span>Yichang Li</span> -->
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
@@ -95,9 +95,7 @@
                 <div class="container">
                     <div class="row full-screen align-items-center">
                         <div class="col-lg-12 text-center section-title">
-                            <h2 class="medium-dark-color">
-                                A Technical UX Designer
-                            </h2>
+                            <object class="tagline-svg" type="image/svg+xml" data="static/img/tagline.svg"></object>
                             <p>
                                 Creating meaningful and delightful solutions through human-centred design.
                             </p>
@@ -117,107 +115,136 @@
             <section id="projects">
                 <div class="container">
                     <div class="section-title text-center m-5rem-b">
-                        <h3>Projects</h3>
+                        <h3 class="display-text">Projects</h3>
                     </div>
+                </div>
+            </section>
+            <section id="projects_openpo">
+                <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 m-3rem-t">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="static/pages/esplanade.html">
-                                        <img src="static/img/esplanade.png" title="esplanade show case" alt="esplanade show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Concept</span>
-                                        <span class="meta">UI, Information Architecture</span>
-                                    </div>
-                                    <h5><a href="static/pages/esplanade.html">Esplanade Website Redesign</a></h5>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
-                                    </div>
-                                </div>
+                        <div class="col-lg-5">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/openpo.html">
+                                    <img src="static/img/openpo/cover_1.png" alt="yellow bg">
+                                    <img src="static/img/openpo/cover_2.png" alt="product image">
+                                </a>
                             </div>
                         </div>
-                        <div class="col-lg-6 m-3rem-t">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="static/pages/openpo.html">
-                                        <img src="static/img/openpo.png" title="OpenPO design show case" alt="OpenPo design show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">UX Design</span>
-                                        <span class="meta">User Research, CJM, Mobile Design</span>
-                                    </div>
-                                    <h5><a href="static/pages/openpo.html">OpenPO, Pre-order Manager</a></h5>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="static/pages/openpo.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-lg-6 offset-lg-1">
+                            <small>Ongoing Project</small>
+                            <h3 class="m-0rem-t m-1rem-b">OpenPO</h3>
+                            <span class="badge openpo-bg">User Research</span>
+                            <span class="badge openpo-bg">Mobile Design</span>
+                            <span class="badge openpo-bg">Market Validation</span>
+                            <p class="m-1rem-t">OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. OpenPO is an ongoing project and is in its validating phase.</p>
+                            <a class="read-more-link openpo-color" href="static/pages/openpo.html">
+                                Read More
+                                <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
+                            </a>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="projects_esplanade">
+                <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 m-3rem-t">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="static/pages/zalora.html">
-                                        <img src="static/img/zalora.png" title="zalora design system show case" alt="zalora design system show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Design System</span>
-                                        <span class="meta">UX Patterns, React, CSS</span>
-                                    </div>
-                                    <h5><a href="static/pages/zalora.html">ZALORA Design System</a></h5>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="static/pages/zalora.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-lg-6">
+                            <small>Concept Project</small>
+                            <h3 class="m-0rem-t m-1rem-b">Esplanade Website Redesign</h3>
+                            <span class="badge esplanade-bg white-color">Information Architecture</span>
+                            <span class="badge esplanade-bg white-color">UI Redesign</span>
+                            <span class="badge esplanade-bg white-color">Responsive Design</span>
+                            <p class="m-1rem-t">In this project, my team and I redesign the Information Architecture (IA) and key pages layout of Esplanade. We proceeded with the project by following the design thinking process.</p>
+                            <a class="read-more-link esplanade-color" href="static/pages/esplanade.html">
+                                Read More
+                                <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
+                            </a>
                         </div>
-                        <div class="col-lg-6 m-3rem-t">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="static/pages/wap.html">
-                                        <img src="static/img/huemail.png" title="huemail security feature show case" alt="huemail security feature show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Released Project</span>
-                                        <span class="meta">Product Design, Enterprise System</span>
-                                    </div>
-                                    <h5><a href="static/pages/wap.html">Works Applications Enterprise Email Security Features Design</a></h5>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="static/pages/wap.html">Read More</a>
-                                    </div>
-                                </div>
+                        <div class="col-lg-5 offset-lg-1">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/esplanade.html">
+                                    <img src="static/img/esplanade/cover_1.png" alt="bg">
+                                    <img src="static/img/esplanade/cover_2.png" alt="product image">
+                                </a>
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="projects_zalora">
+                <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 m-3rem-t">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="static/pages/autodesk.html">
-                                        <img src="static/img/autodesk.png" title="autodesk desktop app show case" alt="autodesk desktop app show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Intern Project</span>
-                                        <span class="meta">UI, Prototype</span>
-                                    </div>
-                                    <h5><a href="static/pages/autodesk.html">Autodesk WingMan Design Project</a></h5>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="static/pages/autodesk.html">Read More</a>
-                                    </div>
-                                </div>
+                        <div class="col-lg-5">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/zalora.html">
+                                    <img src="static/img/zalora/cover_1.png" alt="bg">
+                                    <img src="static/img/zalora/cover_2.png" alt="product image">
+                                </a>
                             </div>
+                        </div>
+                        <div class="col-lg-6 offset-lg-1">
+                            <small>Released Design System</small>
+                            <h3 class="m-0rem-t m-1rem-b">Style</h3>
+                            <span class="badge zalora-bg white-color">UX Patterns</span>
+                            <span class="badge zalora-bg white-color">ReactJs</span>
+                            <span class="badge zalora-bg white-color">CSS</span>
+                            <p class="m-1rem-t">Style is a design system that defines the interaction standards, design patterns, and guidelines for all digital channels in ZALORA.</p>
+                            <a class="read-more-link zalora-color" href="static/pages/zalora.html">
+                                Read More
+                                <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="projects_huemail">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <small>Released Enterprise Web Application</small>
+                            <h3 class="m-0rem-t m-1rem-b">Security Features</h3>
+                            <span class="badge huemail-bg white-color">Enterprise System</span>
+                            <span class="badge huemail-bg white-color">Use Cases</span>
+                            <p class="m-1rem-t">
+                                In this project, I worked with the product owner of HUE Mail (an enterprise email system) and the sales team to define the problems related to security issues, discovered potential solutions, and delivered the interactive designs by following the company design system.
+                            </p>
+                            <a class="read-more-link huemail-color" href="static/pages/wap.html">
+                                Read More
+                                <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
+                            </a>
+                        </div>
+                        <div class="col-lg-5 offset-lg-1">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/zalora.html">
+                                    <img src="static/img/huemail/cover_1.png" alt="bg">
+                                    <img src="static/img/huemail/cover_2.png" alt="product image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="projects_autodesk">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/zalora.html">
+                                    <img src="static/img/autodesk/cover_1.png" alt="bg">
+                                    <img src="static/img/autodesk/cover_2.png" alt="product image">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 offset-lg-1">
+                            <small>Released Desktop Application</small>
+                            <h3 class="m-0rem-t m-1rem-b">WingMan </h3>
+                            <span class="badge autodesk-bg">Interaction Design</span>
+                            <span class="badge autodesk-bg">Interactive Prototype</span>
+                            <p class="m-1rem-t">Style is a design system that defines the interaction standards, design patterns, and guidelines for all digital channels in ZALORA.</p>
+                            <a class="read-more-link autodesk-color" href="static/pages/autodesk.html">
+                                Read More
+                                <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -225,7 +252,7 @@
             <section id="about">
                 <div class="container">
                     <div class="section-title text-center m-5rem-b">
-                        <h3>About Me</h3>
+                        <h3 class="display-text">About Me</h3>
                     </div>
                     <div class="row align-items-center">
                         <div class="col-lg-4">
@@ -266,6 +293,9 @@
         <!-- jquery -->
         <script src="static/js/jquery-3.2.1.min.js"></script>
         <script src="static/js/jquery-migrate-3.0.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
+
         <!-- end jquery -->
         <!-- appear -->
         <script src="static/plugin/appear/jquery.appear.js"></script>
