--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -43,7 +43,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
+                        <!-- <span>Yichang Li</span> -->
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
@@ -65,7 +65,7 @@
         <main>
             <section id="openpo_project_overview">
                 <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
-                    <h1>OpenPO -- Pre-order Manager</h1><br>
+                    <h1>OpenPO</h1><br>
                     <small>Marketing Research · UI/UX Design</small>
                     <div class="row m-1rem-b m-3rem-t">
                         <div class="col-lg-6">
@@ -79,7 +79,7 @@
                         <div class="col-lg-4">
                             <h6>Overview</h6>
                             <div>
-                                OpenPO aims to help merchants to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions.  OpenPO is an ongoing project and is still in the validating phase.
+                                OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. OpenPO is an ongoing project and is in its validating phase.
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
             </section>
             <div class="row m-3rem-t">
                 <div class="col-lg-6 offset-lg-3">
-                    <img src="../img/openpo_process.png" alt="openpo project process">
+                    <img src="../img/openpo/openpo_process.png" alt="openpo project process">
                 </div>
             </div>
             
@@ -95,7 +95,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Project <br>Kick-off</h3>
+                            <h3 class="display-text">Project Kick-off</h3>
                         </div>
                         <div class="col-lg-6 offset-lg-2 m-3rem-t">
                             <p>
@@ -109,7 +109,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Initial Research</h3>
+                            <h3 class="display-text">Initial Research</h3>
                             <p class="m-0rem-t medium-dark-color">
                                 The local Indonesian team helped me with conducting user interviews due to the language barrier. Before the research started, I conducted a user research workshop where the team can learn the process of a user interview with some pro tips and can practice with each other. I've also created a discussion guide to assist the team in facilitating conversations with interviewees. 
                             </p>
@@ -134,7 +134,7 @@
                                 <li>Actively doing PO business (open new POs at least two times a month)</li>
                                 <li>In the F&B field</li>
                             </ul>
-                            <img class="shadow rounded" src="../img/openpo_discussion guide.png" alt="Discussion guide for openpo initial research">
+                            <img class="shadow rounded" src="../img/openpo/openpo_discussion guide.png" alt="Discussion guide for openpo initial research">
                         </div>
                     </div>
                     <div class="row m-3rem-t">
@@ -146,8 +146,8 @@
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-10 offset-lg-1">
-                            <img src="../img/openpo_persona.png" alt="Persona of OpenPO">
-                            <img src="../img/openpo_jm.png" alt="Journey map of persona sarah">
+                            <img src="../img/openpo/openpo_persona.png" alt="Persona of OpenPO">
+                            <img src="../img/openpo/openpo_jm.png" alt="Journey map of persona sarah">
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Brainstorming</h3>
+                            <h3 class="display-text">Brainstorming</h3>
                             <p class="m-0rem-t medium-dark-color">
                                 After the initial research, I conducted a brainstorming section with the design team to define the problem statement and the user flow for our MVP.
                             </p>
@@ -179,13 +179,13 @@
                             <h5>Buyer's Flow</h5>
                         </div>
                         <div class="col-lg-10">
-                            <img src="../img/openpo_buyer_flow.png" alt="openpo workflow for buyer">
+                            <img src="../img/openpo/openpo_buyer_flow.png" alt="openpo workflow for buyer">
                         </div>
                         <div class="col-lg-2">
                             <h5>Seller's Flow</h5>
                         </div>
                         <div class="col-lg-10">
-                            <img src="../img/openpo_seller_flow.png" alt="openpo workflow for seller">
+                            <img src="../img/openpo/openpo_seller_flow.png" alt="openpo workflow for seller">
                         </div>
                     </div>
                 </div>
@@ -194,13 +194,13 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Low-Fidelity Prototype</h3>
+                            <h3 class="display-text">Low-Fidelity Prototype</h3>
                             <p class="m-0rem-t medium-dark-color">
                                 With the low-fidelity prototypes, the pre-order management and the general structure of the service could easily be tested in internal usability tests. Without much effort, adjustments could be made before going into the much more costly digital implementation.
                             </p>
                         </div>
                         <div class="col-lg-8">
-                            <img src="../img/openpo_lofi.png" alt="openpo wireframe">
+                            <img src="../img/openpo/openpo_lofi.png" alt="openpo wireframe">
 
                         </div>
                     </div>
@@ -210,13 +210,13 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Visual Style</h3>
+                            <h3 class="display-text">Visual Style</h3>
                             <p class="m-0rem-t medium-dark-color">
                                 The visual design was developed by iterating from mood boards and styletiles to the UI kit and finally to creating a first version of the style guide.
                             </p>
                         </div>
                         <div class="col-lg-8">
-                            <img src="../img/openpo_style.png" alt="openpo style guide">
+                            <img src="../img/openpo/openpo_style.png" alt="openpo style guide">
                         </div>
                     </div>
                     
@@ -226,7 +226,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Validation</h3>
+                            <h3 class="display-text">Validation</h3>
                             <p>
                                 Before implementing the design and release to the market, the product management team wanted to validate if the proposed solution is what our potential customers want.
                             </p>
@@ -248,7 +248,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3>Future Plan</h3>
+                            <h3 class="display-text">Future Plan</h3>
                         </div>
                         <div class="col-lg-6 offset-lg-2 m-3rem-t">
                             <p>
